--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <title>게시글 목록</title>
 
-    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body class="container py-4">
-<h1 class="mb-3">게시글 목록</h1>
+<h1 class="mb-4">게시글 목록</h1>
 
-<div class="alert alert-success">
-    🎉 화면 연결 성공!
-</div>
+<a href="/posts/new" class="btn btn-primary mb-3">글 작성</a>
 
-<a href="/posts/new" class="btn btn-primary">글 작성</a>
+<ul class="list-group">
+    <li class="list-group-item"
+        th:each="post : ${posts}">
+        <a th:href="@{/posts/{id}(id=${post.id})}"
+           th:text="${post.title}">
+            게시글 제목
+        </a>
+    </li>
+</ul>
 </body>
 </html>
